--- a/RequestManagementSystem/package.json
+++ b/RequestManagementSystem/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.10.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
